Clean up code, suppress warnings